--- a/Risk_model_code_and_description.Rmd
+++ b/Risk_model_code_and_description.Rmd
@@ -11,9 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Step by step for creating risk model code
 
-For this document I hope to go through my code for the risk model and double check that each piece does what it is supposed to do. The main document has functions first and then parameter declaration and then running the simulations. For this document I will go in order of the pieces needed, so I will start withe the community level model, then to adjacency matrix, transition, and then lastly all the code need to solve the system of equations
 
-```{r packages}
+```{r packages, include=FALSE}
 
 library(deSolve)
 library(tidyverse)
@@ -114,13 +113,13 @@ small_bld_3_rooms_graph<- graph_from_adjacency_matrix(small_bld_3_rooms, mode = 
 plot(small_bld_3_rooms_graph)
 church_graph<- graph_from_adjacency_matrix(church_adjacency_matrix, mode = "undirected")
 #take a look
-plot(church_graph)
+#plot(church_graph)
 
 ```
 ```{r set carrying capacities}
 graph_to_use <- small_bld_3_rooms
-adjacency_matrix_to_use <- church_adjacency_matrix 
-N_rooms <- ncol(adjacency_matrix_to_use) #number of rooms
+adjacency_matrix_to_use <- small_bld_3_rooms 
+#N_rooms <- ncol(adjacency_matrix_to_use) #number of rooms
 # Church_C<- c(200, #column 1 - main area / Hallway
 #        100, # column 2 - Hallway
 #        100, # column 3 - Hallway
@@ -164,20 +163,20 @@ length(Church_C)
 ```
 Now that we have building defined by the adjacency matrix, we need to specify the conditions in the building
 ```{r Building paramaters}
-Max_Building_Capacity <- sum(Church_C) 
+Max_Building_Capacity_small_bld <- sum(small_bld_3_rooms_C) 
 Prop_full <- 0.8 # how full do we want our building capacity to be
-Adj_Max_Building_Capacity <- round(Prop_full*Max_Building_Capacity,0) #Adjusted capacity - number of individuals that will be in the building such that building is at 'Prop_full' capacity
-delt <- Adj_Max_Building_Capacity/community_pop # proportionality constant ( what proportion of individuals from the community are in the building of interest)
+Adj_Max_Building_Capacity_small_bld <- round(Prop_full*Max_Building_Capacity_small_bld,0) #Adjusted capacity - number of individuals that will be in the building such that building is at 'Prop_full' capacity
+delt_small_bld <- Adj_Max_Building_Capacity_small_bld/community_pop # proportionality constant ( what proportion of individuals from the community are in the building of interest)
 
 ```
 
 Next, we need to put people in our building. These will be our initial conditions for the building level model.
 
   
-```{r initialize building}
+```{r initialize building, include=FALSE}
 
 day <- 31 #What day to extract results from the community level model
-N_rooms <- length(Church_C)
+#N_rooms <- length(small_bld_3_rooms_C)
 Bld_setup_func <- function(Community_output,day, delt,N_rooms){
   Building_ICs <- Community_output[day,] #Retrieves the number of S, I, and R individuals in the community at a particular day.
   
@@ -230,19 +229,22 @@ Bld_setup_func <- function(Community_output,day, delt,N_rooms){
   return(data.frame(S=S_prop,I=I_prop,R=R_prop, P=P_x, N_x = S_x+I_x+R_x))
 }
 
-Church_setup <- Bld_setup_func(Community_output = Community_output,day = day,delt = delt,N_rooms =N_rooms)
-Church_setup
-r1_pop <-(Church_setup$S[1]+Church_setup$I[1]+Church_setup$R[1])*Adj_Max_Building_Capacity
-r2_pop <-(Church_setup$S[2]+Church_setup$I[2]+Church_setup$R[2])*Adj_Max_Building_Capacity
-r3_pop<- (Church_setup$S[3]+Church_setup$I[3]+Church_setup$R[3])*Adj_Max_Building_Capacity
-r1_pop+r2_pop+r3_pop
+# Church_setup <- Bld_setup_func(Community_output = Community_output,day = day,delt = delt,N_rooms =length(small_bld_3_rooms_C))
+# Church_setup
+# r1_pop <-(Church_setup$S[1]+Church_setup$I[1]+Church_setup$R[1])*Adj_Max_Building_Capacity
+# r2_pop <-(Church_setup$S[2]+Church_setup$I[2]+Church_setup$R[2])*Adj_Max_Building_Capacity
+# r3_pop<- (Church_setup$S[3]+Church_setup$I[3]+Church_setup$R[3])*Adj_Max_Building_Capacity
+# r1_pop+r2_pop+r3_pop
 
 ```
 
 ```{r Not over capacity setup}
 
 day <- 31 #What day to extract results from the community level model
-N_rooms <- length(Church_C)
+#N_rooms <- length(Church_C)
+# delt is the proportionality constant
+# C_x is the room capacity for each room
+# N_total is the total number of individuals that we want in the building
 Bld_setup_func_v2 <- function(Community_output,day, delt,N_rooms, C_x, N_total){
   Building_ICs <- Community_output[day,] #Retrieves the number of S, I, and R individuals in the community at a particular day.
   
@@ -278,7 +280,7 @@ Bld_setup_func_v2 <- function(Community_output,day, delt,N_rooms, C_x, N_total){
   Ib <- Community_output$I[day]*delt # number of Infectious in building
   Rb <- Community_output$R[day]*delt # number of Recovered in building
   
-  # calculate the proportion of S,I, and R thatshould be in the building
+  # calculate the proportion of S,I, and R that should be in the building
   Sb_prop <- Sb/N_total
   Ib_prop <- Ib/N_total
   Rb_prop <- Rb/N_total
@@ -298,11 +300,11 @@ Bld_setup_func_v2 <- function(Community_output,day, delt,N_rooms, C_x, N_total){
   return(data.frame(S=S_x_prop,I=I_x_prop,R=R_x_prop, P=P_x, N_x = N_x))
 }
 
-Church_setup <- Bld_setup_func_v2(Community_output = Community_output,day = day,delt = delt,N_rooms =N_rooms,C_x = Church_C,N_total = Adj_Max_Building_Capacity)
-Church_setup
-r1_pop <-(Church_setup$S[1]+Church_setup$I[1]+Church_setup$R[1])*Adj_Max_Building_Capacity
-r2_pop <-(Church_setup$S[2]+Church_setup$I[2]+Church_setup$R[2])*Adj_Max_Building_Capacity
-r3_pop<- (Church_setup$S[3]+Church_setup$I[3]+Church_setup$R[3])*Adj_Max_Building_Capacity
+Small_bld_setup <- Bld_setup_func_v2(Community_output = Community_output,day = day,delt = delt_small_bld,N_rooms =length(small_bld_3_rooms_C),C_x = small_bld_3_rooms_C,N_total = Adj_Max_Building_Capacity_small_bld)
+Small_bld_setup
+r1_pop <-(Small_bld_setup$S[1]+Small_bld_setup$I[1]+Small_bld_setup$R[1])*Adj_Max_Building_Capacity_small_bld
+r2_pop <-(Small_bld_setup$S[2]+Small_bld_setup$I[2]+Small_bld_setup$R[2])*Adj_Max_Building_Capacity_small_bld
+r3_pop<- (Small_bld_setup$S[3]+Small_bld_setup$I[3]+Small_bld_setup$R[3])*Adj_Max_Building_Capacity_small_bld
 r1_pop+r2_pop+r3_pop
 ```
 
@@ -311,23 +313,23 @@ r1_pop+r2_pop+r3_pop
 Now lets check that our building setup function did what I wanted it to. 
 Each room's proportion should sum to 1. And if we convert back to numbers using N_x the numbers should equal
 ```{r props sum to 1}
-#Church_setup %>% mutate(total_prop = S_prop+I_prop+R_prop)
+Small_bld_setup %>% summarise(total_prop = sum(S)+sum(I)+sum(R),build_pop = sum(N_x))
 ```
 props sum to 1 so that is good
 
 ```{r props in building match community}
 #prop of susceptible in building
-sum(Church_setup$S)
+sum(Small_bld_setup$S)
 #prop of susceptible in community
 Community_output$S[day]/(Community_output$S[day]+Community_output$I[day]+Community_output$R[day])
 
 #prop of infectious in building
-sum(Church_setup$I)
+sum(Small_bld_setup$I)
 #prop of infectious in community
 Community_output$I[day]/(Community_output$S[day]+Community_output$I[day]+Community_output$R[day])
 
 #prop of recovered in building
-sum(Church_setup$R)
+sum(Small_bld_setup$R)
 #prop of susceptible in community
 Community_output$R[day]/(Community_output$S[day]+Community_output$I[day]+Community_output$R[day])
 
@@ -338,7 +340,7 @@ Okay, great all of that checks out
 **Now people and particles need to move (Transition matrices)**
 
 ```{r}
-Create_T_Matrix <-function(adjacency_matrix_to_use){
+Create_T_Matrix <-function(adjacency_matrix_to_use, N_rooms){
   set.seed(123145) # <- easier for debugging
   T_mov <- data.frame(matrix(runif(N_rooms^2), nrow = N_rooms)) #populates a square matrix/dataframe with random numbers between 0 and 1 for the number of rooms that our building has.
   diag(T_mov) <- 0 #set diagonal to 0
@@ -348,23 +350,26 @@ Create_T_Matrix <-function(adjacency_matrix_to_use){
   return(T_mov)
 }
 
-Church_T_mov <- Create_T_Matrix(adjacency_matrix_to_use = adjacency_matrix_to_use)
-sum(Church_T_mov[1,])
-sum(Church_T_mov[2,])
-sum(Church_T_mov[3,])
+#Church_T_mov <- Create_T_Matrix(adjacency_matrix_to_use = church_adjacency_matrix, N_rooms = length())
+Small_bld_T_mov <- Create_T_Matrix(adjacency_matrix_to_use = small_bld_3_rooms,N_rooms = length(small_bld_3_rooms_C))
+
+sum(Small_bld_T_mov[1,])
+sum(Small_bld_T_mov[2,])
+sum(Small_bld_T_mov[3,])
 # sum(Church_T_mov[4,])
 # sum(Church_T_mov[5,])
-r1_in <- sum(Church_T_mov[,1])
-r1_out <- sum(Church_T_mov[1,])
+r1_in <- sum(Small_bld_T_mov[,1])
+r1_out <- sum(Small_bld_T_mov[1,])
 r1_change <- r1_in-r1_out
-r2_in <- sum(Church_T_mov[,2])
-r2_out <- sum(Church_T_mov[2,])
+r2_in <- sum(Small_bld_T_mov[,2])
+r2_out <- sum(Small_bld_T_mov[2,])
 r2_change <- r2_in-r2_out
-r3_in <- sum(Church_T_mov[,3])
-r3_out <- sum(Church_T_mov[3,])
+r3_in <- sum(Small_bld_T_mov[,3])
+r3_out <- sum(Small_bld_T_mov[3,])
 r3_change <- r3_in - r3_out
 # We can use the same function for the particle matrix
-Church_theta_mov <- Create_T_Matrix(adjacency_matrix_to_use = adjacency_matrix_to_use)
+#Church_theta_mov <- Create_T_Matrix(adjacency_matrix_to_use = church_adjacency_matrix)
+Small_bld_theta_mov <- Create_T_Matrix(adjacency_matrix_to_use = small_bld_3_rooms,N_rooms = length(small_bld_3_rooms_C))
 
 ```
 
@@ -374,13 +379,13 @@ Church_theta_mov <- Create_T_Matrix(adjacency_matrix_to_use = adjacency_matrix_t
 ```{r parameters}
 parms <-data.frame(s=100,a=5, d=3,lam = 1)
 # s = shedding, a = absorption, d = decay, lam = scalar for room capacities
-N_b <- Adj_Max_Building_Capacity #Building population size
+#N_b <- Adj_Max_Building_Capacity #Building population size
 Maxtime <- 24*3
 times <- seq(from = 0, to = Maxtime, by = 0.2)
-m <- 4 # number of equations per room
+m <- 5 # number of equations per room
 ```
 
-For the model we are going to have to sum over some of the vectors/matrices so we will put those steps in functions. This is needed for the movement of individuals and particles. Particles and people will have to have a different function because there re capacities on rooms for people but not particles.
+For the model we are going to have to sum over some of the vectors/matrices so we will put those steps in functions. This is needed for the movement of individuals and particles. Particles and people will have to have a different function because there are capacities on rooms for people but not particles.
 
 ```{r movement functions}
 
@@ -446,7 +451,7 @@ flux_out_particles <- function(N_rooms, Transition_matrix,State){
 
 
 **Function for the whole model**
-```{r function for model}
+```{r function for model, include=FALSE}
 Particle_model_v1 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_use,C_x,N_b){
   ncompartment <- 4
   n_rooms <- length(x)/ncompartment
@@ -478,24 +483,25 @@ Particle_model_v1 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_
 
 Checking what the model should do based on the initial conditions and stepping through manually
 ```{r sanity check}
-Particle_model_v2 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_use,C_x,N_b){
-
-# x <- Church_Init_conds
-# T_mov <- Church_T_mov
-# 
-# theta_mov <- Church_theta_mov
-# adjacency_matrix_to_use <- small_bld_3_rooms
-# C_x <- small_bld_3_rooms_C
-# N_b <- N_b
- ncompartment <- 5
+Particle_model_v2 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_use,C_x,N_b,N_rooms){
+  
+  # x <- Church_Init_conds
+  # T_mov <- Church_T_mov
+  # 
+  # theta_mov <- Church_theta_mov
+  # adjacency_matrix_to_use <- small_bld_3_rooms
+  # C_x <- small_bld_3_rooms_C
+  # N_b <- N_b
+  N_rooms <- N_rooms
+  ncompartment <- 5
   n_rooms <- length(x)/ncompartment
   S <- as.matrix(x[1:n_rooms])
   I <- as.matrix(x[(n_rooms+1):(2*n_rooms)])
   R <- as.matrix(x[(2*n_rooms+1):(3*n_rooms)])
   P <- as.matrix(x[(3*n_rooms+1):(4*n_rooms)])
   N_x <- as.matrix(x[(4*n_rooms+1):(5*n_rooms)])
-
-
+  
+  
   with(parms,{
     
     dS <- as.matrix((flux_in_people(N_rooms, Transition_matrix =T_mov, State=S,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms, Transition_matrix = T_mov, State=S,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x))
@@ -508,18 +514,18 @@ Particle_model_v2 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_
     # s3_out <- S[1]*T_mov[1,3]*(1-(((S[3]+I[3]+R[3])*N_b)/C_x[3]))
     # 
     # Total_Sx <- s1_in+s2_in+s3_in - (s1_out+s2_out+s3_out)
-    dI <- as.matrix((flux_in_people(N_rooms, Transition_matrix =T_mov, State=I,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms, Transition_matrix = T_mov, State=I,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x))
+    dI <- as.matrix((flux_in_people(N_rooms=N_rooms, Transition_matrix =T_mov, State=I,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms=N_rooms, Transition_matrix = T_mov, State=I,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x))
     
-    dR <- as.matrix((flux_in_people(N_rooms, Transition_matrix =T_mov, State=R,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms, Transition_matrix = T_mov, State=R,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x))
+    dR <- as.matrix((flux_in_people(N_rooms=N_rooms, Transition_matrix =T_mov, State=R,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms=N_rooms, Transition_matrix = T_mov, State=R,Room_pops = (S+I+R)*N_x,Carrying_capacity = C_x))
     #last step will be the particle EQ
     
-    dP <- s*as.matrix(I)*as.matrix((S+I+R)*N_x) - as.matrix(a*P/(lam*C_x*((S+I+R)*N_x)))-d*as.matrix(P) + as.matrix(as.matrix(flux_in_particles(N_rooms, theta_mov,State = P)) - as.matrix(flux_out_particles(N_rooms, theta_mov,State = P)))
+    dP <- s*as.matrix(I)*as.matrix((S+I+R)*N_x) - as.matrix(a*P/(lam*C_x*((S+I+R)*N_x)))-d*as.matrix(P) + as.matrix(as.matrix(flux_in_particles(N_rooms=N_rooms, theta_mov,State = P)) - as.matrix(flux_out_particles(N_rooms=N_rooms, theta_mov,State = P)))
     
-    dN_x <- as.matrix((flux_in_people(N_rooms, Transition_matrix =T_mov, State=N_x,Room_pops = N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms, Transition_matrix = T_mov, State=N_x,Room_pops = N_x,Carrying_capacity = C_x))
+    dN_x <- as.matrix((flux_in_people(N_rooms=N_rooms, Transition_matrix =T_mov, State=N_x,Room_pops = N_x,Carrying_capacity = C_x)) - flux_out_people(N_rooms=N_rooms, Transition_matrix = T_mov, State=N_x,Room_pops = N_x,Carrying_capacity = C_x))
     # 
     dt <- c(dS,dI,dR,dP,dN_x)
     
-      return(list(dt))})
+    return(list(dt))})
   
 }
 ```
@@ -527,62 +533,129 @@ Particle_model_v2 <- function(t, x, parms,T_mov, theta_mov, adjacency_matrix_to_
 
 
 ```{r}
-Church_Init_conds_v1 <-c(S=Church_setup$S, I = Church_setup$I, R = Church_setup$R, P = Church_setup$P)
+#Church_Init_conds_v1 <-c(S=Church_setup$S, I = Church_setup$I, R = Church_setup$R, P = Church_setup$P)
 
-Church_Init_conds_v2 <-c(S=Church_setup$S, I = Church_setup$I, R = Church_setup$R, P = Church_setup$P,N_x =Church_setup$N_x)
+Small_bld_Init_conds_v2 <-c(S=Small_bld_setup$S, I = Small_bld_setup$I, R = Small_bld_setup$R, P = Small_bld_setup$P,N_x =Small_bld_setup$N_x)
 
-Church_output_v1 <- data.frame(lsoda(y = Church_Init_conds_v1, func = Particle_model_v1,times = times,
+# Church_output_v1 <- data.frame(lsoda(y = Church_Init_conds_v1, func = Particle_model_v1,times = times,
+#                                   parms = parms,
+#                                   adjacency_matrix_to_use=church_adjacency_matrix,
+#                                   theta_mov =Church_theta_mov,
+#                                   T_mov = Church_T_mov, 
+#                                   C_x=Church_C,N_b = N_b))
+Small_bld_output_v2 <- data.frame(lsoda(y = Small_bld_Init_conds_v2, func = Particle_model_v2,times = times,
                                   parms = parms,
-                                  adjacency_matrix_to_use=church_adjacency_matrix,
-                                  theta_mov =Church_theta_mov,
-                                  T_mov = Church_T_mov, 
-                                  C_x=Church_C,N_b = N_b))
-Church_output_v2 <- data.frame(lsoda(y = Church_Init_conds_v2, func = Particle_model_v2,times = times,
-                                  parms = parms,
-                                  adjacency_matrix_to_use=church_adjacency_matrix,
-                                  theta_mov =Church_theta_mov,
-                                  T_mov = Church_T_mov, 
-                                  C_x=Church_C,N_b = Adj_Max_Building_Capacity))
+                                  adjacency_matrix_to_use=small_bld_3_rooms,
+                                  theta_mov =Small_bld_theta_mov,
+                                  T_mov = Small_bld_T_mov, 
+                                  C_x=small_bld_3_rooms_C,
+                                  N_b = Adj_Max_Building_Capacity_small_bld,
+                                  N_rooms = length(small_bld_3_rooms_C)))
 
 ```
 
 
+```{r, include=FALSE,eval=FALSE}
+# Church_data_clean <- Church_output_v1%>% pivot_longer(cols = !time,
+#                                                    names_to = c("State", "Room"),
+#                                                    names_pattern = "([A-Za-z]+)(\\d+)",
+#                                                    values_to = "Number")
+# 
+# # Church_data_ratios <- Church_data_clean %>% pivot_wider(names_from = c(State),values_from = c(Number)) %>% group_by(time,Room)  %>% 
+# #   mutate(N_x = S+I+R) %>% group_by(time,Room) %>% 
+# #   mutate(K_x = ((parms$s)*I)/((parms$a)*N_x), prop_to_K = P/K_x)
+# # Church_P_x_K_x_plot<-ggplot(Church_data_ratios,aes(x =time, y =prop_to_K,group= Room,color=Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
+# # Church_P_x_K_x_plot
+# # Church_P_x_plot <- ggplot(Church_data_ratios, aes(x=time, y = P, color = Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
+# # Church_P_x_plot
+# 
+# p1_v1 <- Church_data_clean %>% filter(State == "S") %>% 
+#   group_by(State,Room)%>% 
+#   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
+#   geom_line()+theme_classic()+
+#   labs(x = "Time (hours)", y= "Proportion of Susceptible individuals")+ggtitle("Proportion of Susceptible individuals across rooms")
+# 
+# p2_v1 <- Church_data_clean %>% filter(State == "I") %>% 
+#   group_by(State,Room)%>% 
+#   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
+#   geom_line()+theme_classic()+
+#   labs(x = "Time (hours)", y= "Proportion of Infectious individuals")+ggtitle("Proportion of Infectious individuals across rooms")
+# p3_v1 <- Church_data_clean %>% filter(State == "R") %>% 
+#   group_by(State,Room)%>% 
+#   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
+#   geom_line()+theme_classic()+
+#   labs(x = "Time (hours)", y= "Proportion of Recovered individuals")+ggtitle("Proportion of Recovered individuals across rooms")
+# p4_v1 <- Church_data_clean %>% filter(State == "P") %>% 
+#   group_by(State,Room)%>% 
+#   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
+#   geom_line()+theme_classic()+
+#   labs(x = "Time (hours)", y= "Number of infectious particles")+ggtitle("Infectious particles in rooms within a building")
+# p5_v1 <- Church_data_clean %>% filter(State == "x") %>% 
+#   group_by(State,Room)%>% 
+#   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
+#   geom_line()+theme_classic()+
+#   labs(x = "Time (hours)", y= "Number of individuals")+ggtitle("Number of individuals in rooms within a building")
+# 
+# # Church_data_clean %>% filter(State != "P") %>% 
+# #   group_by(time,Room)%>% summarise(total_room_pop=sum(Number)) %>% group_by(time) %>% summarise(tot_bld_pop =sum(total_room_pop)) %>% 
+# #   ggplot( aes(x=time, y = tot_bld_pop))+
+# #   geom_line()+theme_classic()+
+# #   labs(x = "Time (hours)", y= "Number of people")+ggtitle("number of people in building")
+# 
+# p6_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)) %>%
+#   ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
+#   labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in rooms within a building")
+# 
+# p7_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time) %>% summarise(Total_prop=sum(Number)) %>%
+#   ggplot(aes(x=time, y=Total_prop))+geom_line()+
+#   labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in the building")
+# 
+# 
+# p8_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)*Adj_Max_Building_Capacity) %>%
+#   ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
+#   labs(x = "Time (hours)", y= "Number of individuals")+ggtitle("Number of individuals in the building")
+
+```
+
 ```{r}
-Church_data_clean <- Church_output_v1%>% pivot_longer(cols = !time,
+data_clean <- Small_bld_output_v2%>% pivot_longer(cols = !time,
                                                    names_to = c("State", "Room"),
                                                    names_pattern = "([A-Za-z]+)(\\d+)",
                                                    values_to = "Number")
-
-# Church_data_ratios <- Church_data_clean %>% pivot_wider(names_from = c(State),values_from = c(Number)) %>% group_by(time,Room)  %>% 
-#   mutate(N_x = S+I+R) %>% group_by(time,Room) %>% 
+data_ratios <- data_clean %>% pivot_wider(names_from = c(State),values_from = c(Number)) %>% group_by(time,Room)  %>% 
+  mutate(N_x = (S+I+R)*Adj_Max_Building_Capacity_small_bld, ratio = x/N_x) #%>% group_by(time) %>% summarise(Total_prop=sum(N_x), x =sum(x))
+# %>% group_by(time,Room) %>% 
 #   mutate(K_x = ((parms$s)*I)/((parms$a)*N_x), prop_to_K = P/K_x)
 # Church_P_x_K_x_plot<-ggplot(Church_data_ratios,aes(x =time, y =prop_to_K,group= Room,color=Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
-# Church_P_x_K_x_plot
-# Church_P_x_plot <- ggplot(Church_data_ratios, aes(x=time, y = P, color = Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
-# Church_P_x_plot
+ggplot(data_ratios,aes(x=time, color = Room))+geom_line(aes(x = time, y = x/N_x))#+geom_line(aes(x = time, y = N_x))
 
-p1_v1 <- Church_data_clean %>% filter(State == "S") %>% 
+data_clean %>% pivot_wider(names_from = c(State),values_from = c(Number)) %>% 
+   mutate(Prop_room = S+I+R, Num_room =Prop_room*Adj_Max_Building_Capacity_small_bld) %>% 
+   ggplot(aes(x = time,y = x/Num_room,color = Room ))+geom_line()
+
+
+p1_v2 <- data_clean %>% filter(State == "S") %>% 
   group_by(State,Room)%>% 
   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
   geom_line()+theme_classic()+
   labs(x = "Time (hours)", y= "Proportion of Susceptible individuals")+ggtitle("Proportion of Susceptible individuals across rooms")
 
-p2_v1 <- Church_data_clean %>% filter(State == "I") %>% 
+p2_v2 <- data_clean %>% filter(State == "I") %>% 
   group_by(State,Room)%>% 
   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
   geom_line()+theme_classic()+
   labs(x = "Time (hours)", y= "Proportion of Infectious individuals")+ggtitle("Proportion of Infectious individuals across rooms")
-p3_v1 <- Church_data_clean %>% filter(State == "R") %>% 
+p3_v2 <- data_clean %>% filter(State == "R") %>% 
   group_by(State,Room)%>% 
   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
   geom_line()+theme_classic()+
   labs(x = "Time (hours)", y= "Proportion of Recovered individuals")+ggtitle("Proportion of Recovered individuals across rooms")
-p4_v1 <- Church_data_clean %>% filter(State == "P") %>% 
+p4_v2 <- data_clean %>% filter(State == "P") %>% 
   group_by(State,Room)%>% 
   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
   geom_line()+theme_classic()+
   labs(x = "Time (hours)", y= "Number of infectious particles")+ggtitle("Infectious particles in rooms within a building")
-p5_v1 <- Church_data_clean %>% filter(State == "x") %>% 
+p5_v2 <- data_clean %>% filter(State == "x") %>% 
   group_by(State,Room)%>% 
   ggplot( aes(x=time, y = Number, group =Room, color = Room))+
   geom_line()+theme_classic()+
@@ -594,78 +667,16 @@ p5_v1 <- Church_data_clean %>% filter(State == "x") %>%
 #   geom_line()+theme_classic()+
 #   labs(x = "Time (hours)", y= "Number of people")+ggtitle("number of people in building")
 
-p6_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)) %>%
+p6_v2 <- data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)) %>%
   ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
   labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in rooms within a building")
 
-p7_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time) %>% summarise(Total_prop=sum(Number)) %>%
+p7_v2 <- data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time) %>% summarise(Total_prop=sum(Number)) %>%
   ggplot(aes(x=time, y=Total_prop))+geom_line()+
   labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in the building")
 
 
-p8_v1 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)*Adj_Max_Building_Capacity) %>%
-  ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
-  labs(x = "Time (hours)", y= "Number of individuals")+ggtitle("Number of individuals in the building")
-
-```
-
-```{r}
-Church_data_clean <- Church_output_v2%>% pivot_longer(cols = !time,
-                                                   names_to = c("State", "Room"),
-                                                   names_pattern = "([A-Za-z]+)(\\d+)",
-                                                   values_to = "Number")
-
-# Church_data_ratios <- Church_data_clean %>% pivot_wider(names_from = c(State),values_from = c(Number)) %>% group_by(time,Room)  %>% 
-#   mutate(N_x = S+I+R) %>% group_by(time,Room) %>% 
-#   mutate(K_x = ((parms$s)*I)/((parms$a)*N_x), prop_to_K = P/K_x)
-# Church_P_x_K_x_plot<-ggplot(Church_data_ratios,aes(x =time, y =prop_to_K,group= Room,color=Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
-# Church_P_x_K_x_plot
-# Church_P_x_plot <- ggplot(Church_data_ratios, aes(x=time, y = P, color = Room))+geom_line()+labs(title = "Church - Risk - 31 rooms")
-# Church_P_x_plot
-
-p1_v2 <- Church_data_clean %>% filter(State == "S") %>% 
-  group_by(State,Room)%>% 
-  ggplot( aes(x=time, y = Number, group =Room, color = Room))+
-  geom_line()+theme_classic()+
-  labs(x = "Time (hours)", y= "Proportion of Susceptible individuals")+ggtitle("Proportion of Susceptible individuals across rooms")
-
-p2_v2 <- Church_data_clean %>% filter(State == "I") %>% 
-  group_by(State,Room)%>% 
-  ggplot( aes(x=time, y = Number, group =Room, color = Room))+
-  geom_line()+theme_classic()+
-  labs(x = "Time (hours)", y= "Proportion of Infectious individuals")+ggtitle("Proportion of Infectious individuals across rooms")
-p3_v2 <- Church_data_clean %>% filter(State == "R") %>% 
-  group_by(State,Room)%>% 
-  ggplot( aes(x=time, y = Number, group =Room, color = Room))+
-  geom_line()+theme_classic()+
-  labs(x = "Time (hours)", y= "Proportion of Recovered individuals")+ggtitle("Proportion of Recovered individuals across rooms")
-p4_v2 <- Church_data_clean %>% filter(State == "P") %>% 
-  group_by(State,Room)%>% 
-  ggplot( aes(x=time, y = Number, group =Room, color = Room))+
-  geom_line()+theme_classic()+
-  labs(x = "Time (hours)", y= "Number of infectious particles")+ggtitle("Infectious particles in rooms within a building")
-p5_v2 <- Church_data_clean %>% filter(State == "x") %>% 
-  group_by(State,Room)%>% 
-  ggplot( aes(x=time, y = Number, group =Room, color = Room))+
-  geom_line()+theme_classic()+
-  labs(x = "Time (hours)", y= "Number of individuals")+ggtitle("Number of individuals in rooms within a building")
-
-# Church_data_clean %>% filter(State != "P") %>% 
-#   group_by(time,Room)%>% summarise(total_room_pop=sum(Number)) %>% group_by(time) %>% summarise(tot_bld_pop =sum(total_room_pop)) %>% 
-#   ggplot( aes(x=time, y = tot_bld_pop))+
-#   geom_line()+theme_classic()+
-#   labs(x = "Time (hours)", y= "Number of people")+ggtitle("number of people in building")
-
-p6_v2 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number)) %>%
-  ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
-  labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in rooms within a building")
-
-p7_v2 <- Church_data_clean %>% filter(State == "S"| State == "I" | State == "R") %>% ungroup() %>% group_by(time) %>% summarise(Total_prop=sum(Number)) %>%
-  ggplot(aes(x=time, y=Total_prop))+geom_line()+
-  labs(x = "Time (hours)", y= "Proportion of individuals")+ggtitle("Proportion of individuals in the building")
-
-
-p8_v2 <- Church_data_clean %>% filter(State == "x") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number))%>% arrange(desc(Total_prop))%>%
+p8_v2 <- data_clean %>% filter(State == "x") %>% ungroup() %>% group_by(time, Room) %>% summarise(Total_prop=sum(Number))%>% arrange(desc(Total_prop))%>%
   ggplot(aes(x=time, y=Total_prop, color=Room))+geom_line()+
   labs(x = "Time (hours)", y= "Number of individuals")+ggtitle("Number of individuals in the building")
 
@@ -674,14 +685,14 @@ p8_v2 <- Church_data_clean %>% filter(State == "x") %>% ungroup() %>% group_by(t
 
 
 ```{r}
-ggarrange(p1_v1,p1_v2,ncol = 2)
-ggarrange(p2_v1,p2_v2,ncol = 2)
-ggarrange(p3_v1,p3_v2,ncol = 2)
-ggarrange(p4_v1,p4_v2,ncol = 2)
-ggarrange(p5_v1,p5_v2,ncol = 2)
-ggarrange(p6_v1,p6_v2,ncol = 2)
-ggarrange(p7_v1,p7_v2,ncol = 2)
-ggarrange(p8_v1,p8_v2,ncol = 2)
+p1_v2
+p2_v2
+p3_v2
+p4_v2
+p5_v2
+p6_v2
+p7_v2
+p8_v2
 
 ```
 
